# server/app/controllers/api/messages_controller.rb
@@ -1,0 +1,47 @@
+# frozen_string_literal: true
+
+module Api
+  class MessagesController < ApiController
+    before_action :authorize
+
+    def create
+      return render_not_allowed unless send_forbidden? == false
+
+      content = message_params['content']
+      raise MessageTooLongError if content.length > 300
+
+      ActionCable.server.broadcast("chat_#{@chat_id}",
+                                   { sender_id: current_user.id, content: content })
+      json_response(ChatMessage.create!(content: content, sender_id: current_user.id, chat_id: @chat_id))
+    end
+
+    def index
+      json_response(ChatMessage.where(chat_id: @chat_id).order(id: :asc).last(10))
+    end
+
+    private
+
+    def set_chat_id
+      @chat_id = params['chat_id']
+    end
+
+    def send_forbidden?
+      chat_timeout?(@chat_id, current_user.id)
+    end
+
+    def message_params
+      params.require(:chat_message).permit(:content)
+    end
+
+    def reject_user?
+      return true if Rails.cache.exist?("ban_chat_#{@chat_id}_#{current_user.id}")
+
+      ChatParticipant.where(user_id: current_user.id, chat_id: @chat_id).empty?
+    end
+
+    def authorize
+      set_chat_id
+      return render_not_allowed if reject_user?
+    end
+  end
+end
